<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ui.activity.RegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewTelegram"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginTop="50dp"
            android:src="@drawable/telegram"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/registration"
            app:layout_constraintTop_toBottomOf="@id/imageViewTelegram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:inputType="textWebEmailAddress"
            android:hint="@string/enter_your_email"
            android:textColorHint="#222222"
            android:padding="15dp"
            android:background="@drawable/edittextbackground"
            app:layout_constraintTop_toBottomOf="@id/textViewRegistration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:textColorHint="#222222"
            android:padding="15dp"
            android:background="@drawable/edittextbackground"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:inputType="textCapWords"
            android:hint="@string/enter_your_name"
            android:textColorHint="#222222"
            android:padding="15dp"
            android:background="@drawable/edittextbackground"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:inputType="textCapWords"
            android:hint="@string/enter_your_last_name"
            android:textColorHint="#222222"
            android:padding="15dp"
            android:background="@drawable/edittextbackground"
            app:layout_constraintTop_toBottomOf="@id/editTextName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editTextYearsOld"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textColor="@color/black"
            android:inputType="number"
            android:hint="@string/how_old_are_you"
            android:textColorHint="#222222"
            android:padding="15dp"
            android:background="@drawable/edittextbackground"
            app:layout_constraintTop_toBottomOf="@id/editTextLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:background="@drawable/edittextbackground"
            app:layout_constraintTop_toBottomOf="@id/editTextYearsOld"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>