<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20232b"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ui.activity.ResetPasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_centerInParent="true"
                android:src="@drawable/telegram" />



        </RelativeLayout>

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/forgot_password_quastion"/>


        <EditText
            android:textColor="@color/black"
            android:inputType="textWebEmailAddress"
            android:layout_marginTop="40dp"
            android:id="@+id/editTextEmail"
            android:hint="@string/enter_your_email"
            android:textColorHint="#222222"
            android:padding="15dp"
            android:background="@drawable/edittextbackground"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/reset_password"
            android:background="@drawable/edittextbackground"/>


    </LinearLayout>





</ScrollView>
